# base_robot

src/iris_gazebo/: CMakeLists.txt  package.xml
src/iris_gazebo/include/iris_gazebo/: robot_transmission.hpp
src/iris_gazebo/launch/: controll_gazebo.launch  controller.launch  controller.yaml  custom_controller.yaml  display.launch  gazebo.launch  gazebo_control.launch  simulation.launch  twist_controller.launch
src/iris_gazebo/models/KRI_Nasional/: model.sdf
src/iris_gazebo/src/: robot_transmission.cpp
src/iris_gazebo/worlds/: kri_nasional.world
src/iris_robot_description/: CMakeLists.txt  package.xml
src/iris_robot_description/meshes/: 360_cam_1.stl  Guide_MGN12H1R100Z0HM_FILE_1.stl  back_stand_1.stl  back_stand_2_1.stl  base_link.stl  bottom_kicker_holder_1.stl  bracket_linear_1.stl  camera_acrylic_1.stl  camera_bracket_1.stl  camera_bracket_2_1.stl  camera_bracket_3_1.stl  camera_bracket_4_1.stl  camera_disk_1.stl  camera_holder_1.stl  camera_lens_1.stl  camera_lens_top_1.stl  camera_mirror_1.stl  camera_outer_top_cover_1.stl  camera_top_cover_1.stl  capacitor_1.stl  front_body_1.stl  front_body_bottom_left_1.stl  front_body_bottom_right_1.stl  front_body_left_wing_1.stl  front_body_right_wing_1.stl  front_body_top_1.stl  front_pillar_1.stl  front_rear_omni_1.stl  front_right_omni_1.stl  kicker_arm_1.stl  kicker_ash_1.stl  kicker_foot_1.stl  kicker_holder_1.stl  lead_copper_nut_8mm_1.stl  leadscrew_8mm_1.stl  left_ash_to_omni_connector_front_1.stl  left_ash_to_omni_connector_rear_1.stl  left_body_1.stl  left_body_bottom_front_1.stl  left_body_bottom_rear_1.stl  (+79 more)
src/iris_robot_description/scripts/: kicker_controll.py  twist_3_omni.py
src/iris_robot_description/urdf/: iris_robot.gazebo  iris_robot.trans  iris_robot.xacro  materials.xacro
src/iris_robot_description/worlds/: kri_nasional.world
