<?xml version="1.0"?>
<package>
  <name>iris_gazebo</name>
  <version>1.0.0</version>
  <description>Describes iris model for Gazebo</description>
  <maintainer email="danendraclever24@gmaul.com">Danen</maintainer>
  <author email="danendraclever24@gmaul.com">Danen</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>gazebo_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models/" />
		<gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
